--- a/Pipfile
+++ b/Pipfile
@@ -5,25 +5,36 @@ name = "pypi"
 
 [dev-packages]
 
-pipenv = "==11.1.3"
-sphinx = "==1.7.1"
-sphinx-rtd-theme = "==0.2.4"
-coverage = "==4.5.1"
-nose = "==1.3.7"
-nose-htmloutput = "==0.6.0"
-prospector = "==0.12.7"
-tox = "==2.9.1"
-logilab-common = "==1.4.1"
-betamax = "==0.8.0"
-hypothesis = "==3.48.1"
-twine = "==1.10.0"
-django = "==1.11.10"
+# Documenting
+sphinx = "~=1.7.6"
+sphinx_rtd_theme = "~=0.4.1"
+
+# Linting
+prospector = "~=1.1.1"
+
+# Testing
+coverage = "~=4.5.1"
+nose = "~=1.3.7"
+"nose-htmloutput" = "~=0.6.0"
+tox = "~=3.2.1"
+betamax = "~=0.8.1"
+
+# Releasing
+semver = "==2.8.1"
+gitwrapperlib = "==0.7.0"
+
+# Uploading
+twine = "~=1.11.0"
+
+# Logging
+coloredlogs = "~=10.0"
+emoji = "~=0.5.0"
 
 
 [packages]
 
-pyhcl = "==0.3.10"
-pyyaml = "==3.12"
-colored = "==1.3.5"
-schema = "==0.6.7"
-colorama = "==0.3.9"
+pyhcl = "~=0.3.10"
+pyyaml = "~=3.12"
+colored = "~=1.3.5"
+schema = "~=0.6.7"
+colorama = "~=0.3.9"
