--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@
 #
 # Please use Pipfile to update the requirements.
 #
-pyyaml==3.12
-colored==1.3.5
-pyhcl==0.3.10
-colorama==0.3.9
-schema==0.6.7
+colorama~=0.3.9
+colored~=1.3.93
+pyhcl~=0.3.10
+pyyaml~=3.13
+schema~=0.6.8
